--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^7.1.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "wrtc": "^0.4.4"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.1",
