--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^7.1.1",
+    "mock-socket": "^9.0.3",
     "nodemon": "^2.0.2",
+    "sinon": "^9.0.2",
     "wrtc": "^0.4.4"
   },
   "optionalDependencies": {
