re establish node turn

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,8 @@ services:
     volumes:
       - .:/usr/app/
       - /usr/app/node_modules
-    ports: ['8080:8080'] 
+    ports: 
+      - '8080:8080'
+      - '3478:3478/udp'
+      - '49152-65535:49152-65535/udp'
     restart: unless-stopped
