external ip for turn server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,6 @@ services:
       - '8080:8080'
       - '3478:3478/udp'
       - '49152-49252:49152-49252'
+    env_file:
+      - .env
     restart: unless-stopped
